samples/_failures_safe/1761087304_d13454_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c114420.c: In function ‘main’:
./samples/SAFE/__tmp_8c114420.c:147:16: error: missing terminating " character
  147 |         printf("Matrix must be
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8c114420.c:147:9: error: expected expression at end of input
  147 |         printf("Matrix must be
      |         ^~~~~~
./samples/SAFE/__tmp_8c114420.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8c114420.c:147:9: error: expected declaration or statement at end of input
